some nitpicky final touches

--- a/everyday-color-theory/index.html
+++ b/everyday-color-theory/index.html
@@ -82,14 +82,14 @@
 								<span class="ch-no">III</span><br>
 								<span>Limits of Vision & Color Blindness</span>
 							</h2>
-							<p class="lines">Colors can be hard to see.</p> 
+							<p class="lines">Colors can be hard to&nbsp;see.</p> 
 							<p>To the chemist John Dalton, red, orange, yellow, and green all appeared the same. The rest of the color spectrum appeared as gradients of blue and purple. Dalton went on to write the first scientific paper on the subject of <span class="terms">color blindness</span>, “<a href="https://books.google.com/books/about/Extraordinary_Facts_Relating_to_the_Visi.html?id=jYkyAQAAMAAJ">Extraordinary facts relating to the vision of colours</a>” in&nbsp;1798.</p>
 							<!-- nbsp not working? -->
 							<p>Ludwig Wittgenstein — the Austrian philosopher who popularized the <a href="https://en.wikipedia.org/wiki/Rabbit%E2%80%93duck_illusion">rabbit-duck illusion</a> as a means of describing two different ways of seeing — wrote in <em class="italicize">Remarks on Colour,</em> that “not every deviation from the norm must be a blindness.” He pointed out that the “normal” sighted and the color-blind do not have the same concept of&nbsp;color-blindness.</p>
-							<p>People with decreased ability to differentiate between <span class="terms">hues</span> experience color through a series&nbsp;of&nbsp;judgments.</p>
+							<p>People with decreased ability to differentiate between <span class="terms">hues</span> experience color through a series of&nbsp;judgments.</p>
 							<p>My colleague, for example, explained that for red, green, and brown to function for him, he has to consider their context. These judgments may be “wrong” when they need to be “right”; Like the order of a traffic light, the alternating red and green battery light on a vape pen, or the order of a color legend matching the clockwise color placement in a pie&nbsp;chart.</p>
 							<blockquote>
-								<p>If one says 'red' and there are fifty people listening, it can be expected that there will be fifty reds in&nbsp;their&nbsp;minds.</p>
+								<p>If one says 'red' and there are fifty people listening, it can be expected that there will be fifty reds in their&nbsp;minds.</p>
 								<footer>— <cite>Josef Albers</cite></footer>
 							</blockquote>
 							<p class="lines">We see fifty different reds because we each perceive and experience color&nbsp;differently.</p>
@@ -152,7 +152,7 @@
 							<p>Our <span class="terms">perceptions</span> of people or objects in photographs change dramatically from black and white to color. If I see myself in a black and white photo, I am far less critical about my polychromatic flaws because they're filtered out. And if I see a colorized photograph of a historical figure or event, I'm surprised by how real they&nbsp;seem.</p>
 							<p>With the invention of movable type, the colorful heraldic language for coats of arms, was transferred into a <a href="https://en.wikipedia.org/wiki/Hatching_(heraldry)#Conventional_system">one-color hatching system</a> for books, wax seals, and coins. The graphic design duo <a href="http://www.dextersinister.org/index.html?id=35">Dexter Sinister</a> tested the transference of color data to one-color hatching by converting a László Moholy-Nagy panel that he originally “painted” over the phone with a&nbsp;manufacturer.</p>
 							<p>In the <a href="https://www.xrite.com/hue-test">Farnsworth-Munsell test</a>, in which a subject has to arrange 100 hues on a continuous gradation scale, less than sixteen percent achieve a perfect score. According to Johannes Itten, one of Albers's instructors at the Weimar Bauhaus, distinguishing the many shades of a color depends on the <span class="terms">sensitivity</span> of the eye and “the response threshold of the observer.”</p>
-							<p class="lines">Distinguishing the many shades of a color depends on the sensitivity of the eye.</p>
+							<p class="lines">Distinguishing the many shades of a color depends on the sensitivity of the&nbsp;eye.</p>
 							<p>In English, we only use about thirty names for colors in daily vocabulary, and only a “trained artist can discriminate and name a great many hues,” wrote Umberto Eco in “<a href="https://www.servinglibrary.org/journal/11/the-colors-we-see">The&nbsp;Colors&nbsp;We&nbsp;See</a>.”</p>
 							<p>Albers believed that developing a sensitive eye for color took practice, but it doesn't come without a bit of work: Illustrator <a href="https://tamarashopsin.com/">Tamara Shopsin</a> writes that Albers's exercises “were hard and time-consuming”; Sillman compared his <em class="italicize">Interaction of Color</em> to notes from a test kitchen: “To do his exercises, you first have to gather color swatches like ingredients, splice and dice them, layer them and shift them around to test them out on your&nbsp;eyeballs.”</p>
 						</section>
