--- a/gradients/index.html
+++ b/gradients/index.html
@@ -72,7 +72,7 @@
 						<section class="chapters">
 							<h2>
 								<span class="ch-no">IV</span><br>
-								<span>Influence 1: Light and Space Art Revival</span>
+								<span>Light and Space Art Revival</span>
 							</h2>
 							<p>In the art and design world, Light and Space — developed in the 1960s and '70s — has been experiencing a revival thanks to its <span class="terms">Instagramability</span>. Light and Space pioneer James Turrell has been embraced by celebrities like Beyoncé, Drake, and Kanye West. Drake's Hotline Bling video was inspired by Turrell's light-infused rooms called Ganzfelds. The Kardashian-Jenner-West crew <a href="https://web.archive.org/web/20250402180946/https://www.instagram.com/p/BDvhvleG-DA/">posted an Instagram</a> in front of one of Turrell's works in Los Angeles. (I was yelled at by security for taking a picture there but it's fine.)</p>
 							<p>Most recently, West <a href="https://web.archive.org/web/20250402180946/https://www.dazeddigital.com/art-photography/article/42951/1/artist-james-turrell-reasons-beyonce-drake-kanye-loves-roden-crater-project">donated</a> $10 million dollars to the artist.</p>
@@ -90,7 +90,7 @@
 						<section class="chapters">
 							<h2>
 								<span class="ch-no">V</span><br>
-								<span>Influence 2: Technological Nostalgia & Vaporwave</span>
+								<span>Technological Nostalgia & Vaporwave</span>
 							</h2>
 							<p>Vaporwave is a musical and aesthetic movement (started in the early 2010s) that spliced <span class="terms">ambient</span> music, advertising, and imagery from when the internet started.</p>
 							<p class="lines">Vaporwave spliced ambient music, advertising, and imagery from when the internet started.</p>
@@ -107,7 +107,7 @@
 						<section class="chapters">
 							<h2>
 								<span class="ch-no">VI</span><br>
-								<span>Influence 3: Bisexual Lighting & Cyberpunk</span>
+								<span>Bisexual Lighting & Cyberpunk</span>
 							</h2>
 							<p>As <a href="https://web.archive.org/web/20250402180946/https://knowyourmeme.com/memes/bisexual-lighting">Know Your Meme</a> explains, “bisexual lighting is a slang in the queer community for <span class="terms">neon lighting</span> with high emphasis on pinks, purples, and blues in film.” These pinks, purples and blues often fade into one another — appearing like a gradient when rendered in two dimensions. Bisexual lighting shows up in the futuristic genre <span class="terms">cyberpunk</span>, which imagines an era in which high technology and low technology combine and cities are neon-bathed, landmarkless Gothams. (Overlapping with vaporwave.) Mainstream examples of cyberpunk include Blade Runner, Ghost in the Shell, and Black Mirror (specifically the “San Junipero” episode). Hotline Bling makes the list of examples for bisexual lighting; the <span class="terms">gradients</span> come full circle.</p>
 						</section>
