--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -68,14 +68,11 @@
 							<p  class="lines">Color is the most relative medium in&nbsp;art.</p>
 							<p>Challenging examples of very surprising color changes are shown. Then the class is invited to produce similar effects but is not given reasons or favorable conditions. It starts, therefore, on a <span class="terms">trial-and-error</span> basis.</p>
 							<p>Thus, continuing comparison — observation — “thinking in situations” — is promoted, making the class aware that <span class="terms">discovery</span> and <span class="terms">invention</span> are the criteria of creativeness.</p>
-							<p>As a practical study we ask that 2 small rectangles of the same color and the same size be placed on large grounds of very different color.</p>
-							<p>Soon, these first trials are collected and separated into groups of more and less promise. The class will become aware that change is a result of influence.</p>
-							<p>The influencing color is distinguished from the influenced color.</p>
+							<p>As a practical study we ask that 2 small rectangles of the same color and the same size be placed on large grounds of very different color. Soon, these first trials are collected and separated into groups of more and less promise. The class will become aware that change is a result of influence. The influencing color is distinguished from the influenced color.</p>
 							<p class="lines">It is discovered that certain colors are hard to change, and that there are others more susceptible to change.</p>
 							<p>We try to find those colors which are more inclined to exert influence and to distinguish them from those which will accept influence.</p>
 							<p>A second class exhibition of more advanced results should clarify that there are 2 kinds of changing influences working in 2 directions, <span class="terms">light</span> on the one side and <span class="terms">hue</span> on the other. And both occur simultaneously — though in varying strength.</p>
-							<p>Since 2 pieces of the same paper, therefore of the same color, are to appear different — and, if possible, incredibly different — we must compare them under equal conditions. The only colors which are factually different are the large grounds, though they are alike in size and shape. </p>
-							<p>Because of the laboratory character of these studies there is no opportunity to decorate, to illustrate, to represent anything, or to express something — or one's self.</p>
+							<p>Since 2 pieces of the same paper, therefore of the same color, are to appear different — and, if possible, incredibly different — we must compare them under equal conditions. The only colors which are factually different are the large grounds, though they are alike in size and shape. Because of the laboratory character of these studies there is no opportunity to decorate, to illustrate, to represent anything, or to express something — or one's self.</p>
 							<p>Here, successful studies present a demonstration. Since they cannot be misread or misunderstood, they prove understanding both of the <span class="terms">principle</span> involved and of the <span class="terms">materials</span> to be manipulated.</p>
 							<p>It should be clear that, with these exercises and all others to follow, whether or not we arrive at a pleasant or <span class="terms">harmonious</span> color combination is unimportant.</p>
 							<p>Arrangements such as the one shown below disguise the desired effect and lead to confusion:</p>
@@ -164,7 +161,7 @@
 						</section>
 					</article>
 				</main>
-				
+
 				<nav id="nav-end">
                     <ol id="nav-links">
                         <li><a href="../index.html" class="nav-link-home">Home</a></li>
