--- a/gradients/index.html
+++ b/gradients/index.html
@@ -118,7 +118,7 @@
 								<span>The Technology Behind the Trend</span>
 							</h2>
 							<blockquote>
-								<p>Gradients have become more popular as computer display quality increases. The appeal of gradients is “the <span class="terms">illusion of dimension</span>, and giving 2-D designs 3-D appeal.</p>
+								<p>Gradients have become more popular as computer display quality increases. The appeal of gradients is “the <span class="terms">illusion of dimension</span>, and giving 2-D designs 3-D&nbsp;appeal.</p>
 								<footer>— <cite>Tati Pastukhova, co-founder of interactive art space <a href="https://web.archive.org/web/20250402180946/https://www.artechouse.com/">ARTECHOUSE</a></cite></footer>
 							</blockquote>
 							<p>ARTECHOUSE is full of light-based digital installations, but visitors naturally gravitate toward what is most <span class="terms">photogenic</span> — including, unexpectedly, the soft lighting the space installed along their staircase for safety reasons.</p>
