--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -51,16 +51,16 @@
 							</h2>
 							<p>Imagine in front of us 3 pots containing water, from left to right:</p>
 							<ol class="lines multi-temperature">
-								<li><p>WARM</p></li>
-								<li><p>LUKEWARM</p></li>
-								<li><p>COLD</p></li>
+								<li><p class="warm">WARM</p></li>
+								<li><p class="lukewarm">LUKEWARM</p></li>
+								<li><p class="cold">COLD</p></li>
 							</ol>
 							<p>When the hands are dipped first into the outer containers, one feels — experiences — perceives — 2 different temperatures:</p>
-							<p class="temperature">WARM → COLD</p>
+							<p class="temperature"><span class="warm">WARM</span> → <span class="cold">COLD</span></p>
 							<p>Then dipping both hands into the middle container, one perceives again 2 different temperatures, this time, however, in reversed order:</p>
-							<p class="temperature">COLD → WARM</p>
+							<p class="temperature"><span class="cold">COLD</span> → <span class="warm">WARM</span></p>
 							<p>though the water is neither of these temperatures, but of another, namely</p>
-							<p class="temperature">LUKEWARM</p>
+							<p class="temperature lukewarm">LUKEWARM</p>
 							<p>Herewith one experiences a discrepancy between physical fact and psychic effect called, in this case, a <span class="terms">haptic illusion</span> — haptic as related to the sense of touch — the haptic sense.</p>
 							<p>In much the same way as haptic sensations deceive us, so <span class="terms">optical illusions</span> deceive. They lead us to “see” and to read” other colors than those with which we are confronted physically. </p>
 							<p>To begin the study of how color deceives and how to make use of this, the first exercise is to make one and the same color look different.</p>
