updated ./ for nav links

--- a/gradients/index.html
+++ b/gradients/index.html
@@ -13,10 +13,10 @@
 			<div class="layout">
 				<nav id="nav">
                     <ol id="nav-links">
-                        <li><a href="../index.html" class="nav-link-home">Home</a></li>
-						<li><a href="../everyday-color-theory/index.html" class="nav-link-perception">Perception</a></li>
-                        <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
-                        <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
+                        <li><a href="./index.html" class="nav-link-home">Home</a></li>
+						<li><a href="./everyday-color-theory/index.html" class="nav-link-perception">Perception</a></li>
+                        <li><a href="./interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
+                        <li><a href="./gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
                 </nav>
 			
@@ -63,7 +63,7 @@
 						<section class="chapters">
 							<h2>
 								<span class="ch-no">III</span><br>
-								<span>Why You're Seeing Gradients Everywhere</span>
+								<span>Why Gradients Are Everywhere</span>
 							</h2>
 							<p><span class="bold">Why you're seeing it everywhere:</span></p>
 							<p class="lines">Gradients are the confluence of three different trends: <span class="terms">Light and Space</span> art, <span class="terms">vaporwave</span>, and <span class="terms">bisexual lighting</span>.</p>
