--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -13,10 +13,10 @@
 			<div class="layout">
 				<nav id="nav">
                     <ol id="nav-links">
-                        <li><a href="./index.html" class="nav-link-home">Home</a></li>
-						<li><a href="./everyday-color-theory/index.html" class="nav-link-perception">Perception</a></li>
+                        <li><a href="../index.html" class="nav-link-home">Home</a></li>
+						<li><a href="../everyday-color-theory/index.html" class="nav-link-perception">Perception</a></li>
                         <li><a href="./interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
-                        <li><a href="./gradients/index.html" class="nav-link-transition">Transition</a></li>
+                        <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
                 </nav>
 
