--- a/everyday-color-theory/index.html
+++ b/everyday-color-theory/index.html
@@ -57,7 +57,7 @@
 								<span class="ch-no">I</span><br>
 								<span>Opening Reflections on Perception</span>
 							</h2>
-							<p class="lines">The color you see is only the color you think you see.</p>
+							<p class="lines">The color you see is only the color you think you&nbsp;see.</p>
 							<p>Your <span class="terms">interpretation</span> of light landing on a surface depends on your frame of reference and your frame of mind—both can be altered at the speed of&nbsp;light.</p>
 							<p>When I'm overwhelmed in a crowd I distract myself by looking for as many red-colored objects as I can. Red is not typically a calming color, especially if you're staring at miles of brake lights in traffic, but it's really easy for me. Red becomes the most dominant thing on my&nbsp;mind.</p>
 							<blockquote>
